<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fooods"
    tools:context=".VendorLogin">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/venn"
                android:layout_width="306dp"
                android:layout_height="63dp"
                android:layout_marginTop="124dp"

                android:gravity="center"
                android:text="@string/signin"
                android:textColor="#E8DCDC"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/vendoremail"
                android:layout_width="267dp"
                android:layout_height="52dp"
                android:layout_marginTop="220dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.562"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="124dp"
                android:layout_height="48dp"
                android:layout_marginTop="384dp"
                android:background="#4CAF50"
                android:text="@string/vendorlogin"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/passd"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginTop="292dp"
                android:autofillHints="phone"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.602"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/or"
                android:layout_width="402dp"
                android:layout_height="23dp"
                android:layout_marginTop="64dp"
                android:text="@string/or"
                android:textColor="#ECEAE6"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <TextView
                android:id="@+id/newacc"
                android:layout_width="161dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:text="@string/create_new_account"
                android:textColor="#E8DDDD"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.384"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/or" />

            <TextView
                android:id="@+id/textup"
                android:layout_width="86dp"
                android:layout_height="48dp"
                android:layout_marginTop="17dp"
                android:clickable="true"
                android:text="@string/sign_up"
                android:textColor="#78D607"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.83"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/or" />


            <ProgressBar
                android:id="@+id/bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="580dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</RelativeLayout>