<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fooods"
    tools:context=".UserRegister">


 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#99000000"
     android:fillViewport="true">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">


   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="80dp"
       android:gravity="center"
       android:text="@string/register"
       android:textSize="28sp"
       android:textStyle="bold"
       android:textColor="@color/white"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <EditText
       android:id="@+id/UserName"
       android:layout_width="267dp"
       android:layout_height="52dp"
       android:layout_marginTop="192dp"
       android:autofillHints="emailAddress"
       android:background="@drawable/input_bg"
       android:ems="10"
       android:gravity="center"
       android:hint="@string/name"
       android:inputType="text"
       android:paddingLeft="20dp"
       android:paddingTop="13dp"
       android:paddingRight="20dp"
       android:paddingBottom="13dp"
       android:textColor="@color/white"
       android:textColorHint="@color/white"


       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.562"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <EditText
       android:id="@+id/email"
       android:layout_width="267dp"
       android:layout_height="52dp"
       android:layout_marginTop="260dp"
       android:autofillHints="emailAddress"
       android:background="@drawable/input_bg"
       android:ems="10"
       android:gravity="center"
       android:hint="@string/email"
       android:inputType="textEmailAddress"
       android:paddingLeft="20dp"
       android:paddingTop="13dp"
       android:paddingRight="20dp"
       android:paddingBottom="13dp"
       android:textColor="@color/white"
       android:textColorHint="@color/white"


       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.583"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <Button
       android:id="@+id/btn_register"
       android:layout_width="124dp"
       android:layout_height="48dp"
       android:layout_marginTop="432dp"
       android:background="#4CAF50"
       android:text="@string/vendorreg"
       android:textSize="15sp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.533"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <EditText
       android:id="@+id/password"
       android:layout_width="270dp"
       android:layout_height="48dp"
       android:layout_marginTop="328dp"
       android:autofillHints="phone"
       android:background="@drawable/input_bg"
       android:ems="10"
       android:gravity="center"
       android:hint="Password"
       android:inputType="textPassword"
       android:paddingLeft="20dp"
       android:paddingTop="13dp"
       android:paddingRight="20dp"
       android:paddingBottom="13dp"
       android:textColor="@color/white"
       android:textColorHint="@color/white"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.574"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/oor"
       android:layout_width="402dp"
       android:layout_height="23dp"
       android:layout_marginTop="40dp"
       android:text="@string/or"
       android:textColor="#ECEAE6"
       android:textSize="20sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.444"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/btn_register" />
   <ProgressBar
       android:id="@+id/progressBar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="624dp"
       android:visibility="invisible"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.498"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/loginNow"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="560dp"
       android:gravity="center"
       android:text="@string/click_to_login"
       android:textSize="20sp"
       android:textStyle="bold"
       android:textColor="@color/white"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />


  </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>



</RelativeLayout>