<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vendor_Profile">

    <ScrollView
        android:layout_width="0dp"
        android:scrollbars="none"
        android:layout_height="match_parent"

        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:layout_width="219dp"
            android:layout_height="36dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/create_your_profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="169dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="180dp"
            android:gravity="center"
            android:text="Phone Number"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/VendorPhone"
            android:layout_width="337dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="232dp"
            android:background="@drawable/vendorinput"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phone"
            android:inputType="number"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="169dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:gravity="center"
            android:text="Enter Stall Name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Stallname"
            android:layout_width="337dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="112dp"
            android:background="@drawable/vendorinput"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/stall_name"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="172dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="300dp"
            android:gravity="center"
            android:text="Select Location"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/locspin"
            android:layout_width="205dp"
            android:layout_height="51dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="360dp"
            android:spinnerMode="dropdown"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="217dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="428dp"
            android:gravity="center"
            android:text="Enter Stall Address"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/addr"
            android:layout_width="337dp"
            android:layout_height="49dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="480dp"
            android:background="@drawable/vendorinput"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/stall_address"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="169dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="548dp"
            android:gravity="center"
            android:text="Enter Pincode"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pincode"
            android:layout_width="337dp"
            android:layout_height="49dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="600dp"
            android:background="@drawable/vendorinput"
            android:ems="10"
            android:gravity="center"
            android:hint="enter pincode"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="664dp"
            android:inputType="number"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>